2010-01-01  Ethan A Merritt  <merritt@u.washington.edu>

	* term/PostScript/prologue.ps term/PostScript/prologues.h:
	Update version in PostScript prolog.
	Define a user-configurable flag SuppressPDFMark.

2009-12-31  Ethan A Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc:  More info on font use in wxt and cairo terms.

2009-12-30  Thomas Sefzick <thse@users.sourceforge.net>

	* src/graph3d.c: Fix incorrect color assignment of contour lines when
	'set style increment user' is set.

2009-12-24  Ethan A Merritt  <merritt@u.washington.edu>

	* src/tabulate: Fix buffer overflow.

2009-12-22  Ethan A Merritt  <merritt@u.washington.edu>

	* src/win/wgraph.c (drawgraph: W_line_type):  Change initial line
	template for LT_BACKGROUND to 0 (lt -1) rather than 1 (lt 0).
	Bug #1952287

2009-12-18  Ethan A Merritt  <merritt@u.washington.edu>

	* src/tables.h src/tables.c src/show.c src/save.c src/graph3d.h:
	Move all the DGRID3D_* options into a shared table.

	* src/set.c: Replace the set_dgrid3d() routine with a version that uses
	a shared option table and handles input values contained in variables.

	* docs/gnuplot.doc: bring dgrid3d syntax into line with the code

2009-12-08  Ethan A Merritt  <merritt@u.washington.edu>

	* term/emf.trm (ENHemf_put_text): Left/right/center justification of
	enhanced text was not taking into account the text angle. Now it does.
	Bugfix.

	* src/breaders.c (gd_filetype_function): Make load of jpeg or gif image
	conditional on support by the installed libgd.

	* src/unset.c (reset_command): Reset options to plot style filledcurve.
	Bug #2911203

2009-12-04  Tatsuro Matsuoka  <tmacchant3@yahoo.co.jp>

	* config/makefile.mgw config/makefile.cyg:  Create installation
	directories $(DESTDIR)/$(GNUPLOT_PS_DIR) $(DESTDIR)/$(GNUPLOT_LUA_DIR)
	$(DESTDIR)/$(GNUPLOT_JS_DIR)

2009-12-04  Ethan A Merritt  <merritt@u.washington.edu>

	* config/makefile.dj2:  Remove LUA from configuration options because