@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: plot.c,v 1.104.2.1 2009/10/08 16:28:38 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: plot.c,v 1.104.2.2 2010/01/06 17:35:10 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - plot.c */
@@ -433,7 +433,7 @@ main(int argc, char **argv)
     (void) Gcomplex(&udv_pi.udv_value, M_PI, 0.0);
 #ifdef HAVE_ISNAN
     udv_NaN = add_udv_by_name("NaN");
-    (void) Gcomplex(&(udv_NaN->udv_value), atof("NaN"), 0.0);
+    (void) Gcomplex(&(udv_NaN->udv_value), not_a_number(), 0.0);
     udv_NaN->udv_undef = FALSE;
 #endif
 
