@@ -1,3 +1,11 @@
+2010-01-06  Alexander Täschner  <taschna@users.sourceforge.net>
+
+	* config/config.nt src/datafile.c src/eval.c src/plot.c src/stdfn.c
+	src/stdfn.h: Define a generic function not_a_number() in which we can
+	hide platform-specific implementations.  Add a support for initializing
+	NaN and GPVAL_NaN on Windows.
+	Bug #2925544
+
 2010-01-01  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* term/PostScript/prologue.ps term/PostScript/prologues.h:
